[package]
name = "wss"
version = "0.1.0"
authors = ["lamhai1401 <lamthanhhai141@gmail.com>"]
edition = "2018"
default-run = "wssbin"
readme = "README.md"
homepage = "https://github.com/lamhai1401/rust-wss"
repository = "https://github.com/lamhai1401/rust-wss"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3.13" , default-features = false }
rand = "0.8.3"
serde =  {version = "1.0.124", features = ["derive"] }
serde_json = "1.0.64"
tokio = { version = "1.3.0", features = ["macros", "sync"] }
uid = "0.1.5"
warp = "0.3.0"
# coio = { git = "https://github.com/zonyitoo/coio-rs.git" }
# web_server = { git = "https://github.com/lamhai1401/rust-webserver.git" }

[lib]
name = "wsslib"
path = "src/lib.rs"

[[bin]]
name = "wssbin"
path = "src/bin/main.rs"
