[package]
name = "wss"
version = "0.1.0"
authors = ["lamhai1401 <lamthanhhai141@gmail.com>"]
edition = "2018"
default-run = "wssbin"
readme = "README.md"
homepage = "https://github.com/lamhai1401/rust-wss"
repository = "https://github.com/lamhai1401/rust-wss"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tokio-runtime = "0.0.0"
tokio-tls = "0.3.1"
tokio = { version = "1.4.0", features = ["full"] }
futures = "0.3.13"
futures-util = "0.3.13"
futures-channel = "0.3.13"
url = "2.2.1"
tokio-tungstenite = { version = "*", features = ["tls"] }
tokio-net = "0.0.0"
warp = "0.3.1"


# structopt = "0.3.21"
# tokio = { version = "*", features = ["full", "multi-rt-thread"] }"
# futures_codec = "0.4.1"
# coio = { git = "https://github.com/zonyitoo/coio-rs.git" }
# web_server = { git = "https://github.com/lamhai1401/rust-webserver.git" }

[lib]
name = "wss"
# path = "src/"

[[bin]]
name = "wssbin"
path = "src/bin/main.rs"
